--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -6,11 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Girl Talk</title>
+
+    <style>
+        body {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+        
+        </style>
 </head>
 
 <body>
     <script src="https://d3js.org/d3.v5.js"></script>
-    <script src="./girl_talk.js"></script>
+    <!-- <script src="./girl_talk.js"></script> -->
+    <script src="./album.js"></script>
+    
 </body>
 
 </html>
