Import girl talk script file

--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -12,6 +12,8 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          margin: 0px;
+          padding:0px;
         }
         
         </style>
@@ -19,7 +21,7 @@
 
 <body>
     <script src="https://d3js.org/d3.v5.js"></script>
-    <!-- <script src="./girl_talk.js"></script> -->
+    <script src="./girl_talk.js"></script>
     <script src="./album.js"></script>
     
 </body>
