--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -8,7 +8,7 @@
     <title>Girl Talk</title>
 
     <style>
-        body {
+        .centre {
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -19,7 +19,7 @@
         </style>
 </head>
 
-<body>
+<body class="centre">
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="./girl_talk.js"></script>
     <script src="./album.js"></script>
