--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -21,6 +21,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
+            width: 100%;
         }
     </style>
 </head>
