Fixes height to ensure album fixed pos works

--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -11,6 +11,7 @@
     <style>
         body {
             font-family: 'Liu Jian Mao Cao', cursive;
+            height: 2000px;
         }
 
         .centre {
