--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Girl Talk</title>
-    <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 
     <style>
         body {
-            font-family: 'Liu Jian Mao Cao', cursive;
+            font-family: 'Alata', sans-serif;
             height: 2000px;
         }
 
