--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -20,12 +20,14 @@
             align-items: center;
             margin: 0px;
             padding: 0px;
-            
+
         }
 
-        .record h1{
-            font-size: 4.5em;
+        .record h1 {
+            font-size: 5vw;
             color: white;
+            padding-left: 2%;
+            padding-right: 2%;
         }
 
         @media (min-width: 2000px) {
@@ -37,7 +39,7 @@
                 justify-content: center;
             }
 
-            .record h1{
+            .record h1 {
                 flex: 3;
                 order: 9999999;
             }
@@ -59,7 +61,7 @@
     <script src="./girl_talk.js"></script>
     <script src="./album.js"></script>
 
-    
+
 
 </body>
 
