Changes data paths to relative

--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -27,10 +27,10 @@
 <body>
     <div class='content'>
         <a href='./record?allDay'>
-            <img class='album' src='/data/album_art/All_Day.jpg'>
+            <img class='album' src='../data/album_art/All_Day.jpg'>
         </a>
         <a href='./record?feedTheAnimals'>
-            <img class='album' src='/data/album_art/Feed_the_Animals.jpg'>
+            <img class='album' src='../data/album_art/Feed_the_Animals.jpg'>
         </a>
     </div>
 </body>
