--- a/visualisation/index.html
+++ b/visualisation/index.html
@@ -21,17 +21,42 @@
         height: 350px;
     }
 
+    .footer {
+        background: #020202;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 50px;
+    }
+    
+    .author {
+        margin: 0 10px;
+    }
+
+    .icon {
+        width: 20px;
+        height: 20px;
+        margin: 0 10px;
+    }
     </style>
 </head>
 
 <body>
     <div class='content'>
         <a href='./record?allDay'>
-            <img class='album' src='../data/album_art/All_Day.jpg'>
+            <img class='album' src='../images/album_art/All_Day.jpg'>
         </a>
         <a href='./record?feedTheAnimals'>
-            <img class='album' src='../data/album_art/Feed_the_Animals.jpg'>
+            <img class='album' src='../images/album_art/Feed_the_Animals.jpg'>
         </a>
+        <footer class='footer'>
+            <span class='author'>Yusof Bandar</span>
+            <a href='https://twitter.com/BandarYusof' target='_blank' rel='noopener noreferrer'>
+                <img class='icon' src='../images/twitter.svg' alt='twitter'>
+            </a>
+            <a href='https://github.com/YusofBandar' target='_blank' rel='noopener noreferrer'>
+                <img class='icon' src='../images/github.svg' alt='github'>
+            </a>
+        </footer>
     </div>
 </body>
 
