Adds footer to record page

--- a/visualisation/record.html
+++ b/visualisation/record.html
@@ -23,6 +23,22 @@
       svg{
           margin: 10px
       }
+
+      .footer {
+          display: flex;
+          justify-content: center;
+          margin-bottom: 15px;
+      }
+
+      .author {
+          margin: 0 10px;
+      }
+
+      .icon {
+          width: 20px;
+          height: 20px;
+          margin: 0 10px;
+      }
     </style>
 </head>
 
@@ -30,7 +46,17 @@
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="./girlTalk.js"></script>
     <div class='content'>
+
     </div>
+    <footer class='footer'>
+        <span class='author'>Yusof Bandar</span>
+        <a href='https://twitter.com/BandarYusof' target='_blank' rel='noopener noreferrer'>
+            <img class='icon' src='../images/twitter.svg' alt='twitter'>
+        </a>
+        <a href='https://github.com/YusofBandar' target='_blank' rel='noopener noreferrer'>
+            <img class='icon' src='../images/github.svg' alt='github'>
+        </a>
+    </footer>
 </body>
 
 </html>
